--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Secular+One&display=swap");
 
+* { box-sizing: border-box;}
+
 h1,
 h2,
 h3,
@@ -12,19 +14,13 @@ h6 {
 .profile-header {
   width: 100%;
   min-height: 400px;
-  background-image: url("/img/profile/background.gif");
-  background-size: cover;
-  background-position-y: center;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
-  padding: 10rem 0 2rem;
 }
 
 .profile-card {
   width: 50%;
-  height: 700px;
   background-color: whitesmoke;
   position: relative;
   top: 60%;
