--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -34,7 +34,7 @@
     <div class="profile-header">
       <div class="profile-card">
         <div class="profile-image">
-          <img src="/img/profile/profile.gif" alt="profile.jpg" />
+          <img src="/img/profile/<%= sessionUser.image %>" alt=<%= sessionUser.image %>  />
         </div>
         <div class="profile-name">
           <h4><span id="nameUser"><%= sessionUser.firstname %></span> <span id="lastnameUser"><%= sessionUser.lastname %></span></h4>
@@ -133,7 +133,8 @@
       >
     </div>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/normalizr@3.6.1/dist/normalizr.browser.min.js"></script>
     <script src="/js/index.js"></script>
-    <script src="/js/profile.js"></script>
+    <!-- <script src="/js/profile.js"></script> -->
   </body>
 </html>
