--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -45,8 +45,10 @@ h6 {
 
 .profile-image img {
   width: 100%;
+  height: 100%;
   max-height: 100%;
   border-radius: 200px;
+  object-fit: cover;
 }
 
 .profile-name {
